z-index fix.

--- a/static/css/songs_list.css
+++ b/static/css/songs_list.css
@@ -14,9 +14,11 @@ body {
 	line-height:45px;
 	padding: 0;
 	border-bottom: 2px solid #2d2d2d;
+	background: #3b3c41;
 	color:#2d2d2d;
 	font-size: 20px;
 	text-align:center;
+	z-index: 1000;
 }
 	
  
